css/style.css
/* =========================
   Global styles
========================= */
body {
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
  background-color: #f6f7f9;
  margin: 0;
  padding: 40px 20px;
  line-height: 1.6;
}
/*Global headings*/
h1,h2,h3 {
  color: #222;
  margin-bottom: 10px;
  font: weight 600;
}

/*Centered container*/
.container {
  max-width: 1000px;
  margin: 0 auto;
}

/* Center the site content */
header, nav, main, footer {
  max-width: 1000px;
  margin: auto;
  padding: 20px;
}

/* =========================
   Header
========================= */
header {
  text-align: center;/*center content*/
  padding: 40px 20px;
  background-color: #1f3a5f;/*deep blue header bacground*/
  color: white;
  border-radius: 8px;
}

header h1 {
  font-size: 2.2em;
  margin-bottom: 10px;
}

header p {
  font-size: 1.1em;
  margin: 50px 0;
  color: #e0e0e0;/*softer text on dark background*/
}

/* =========================
   Navigation
========================= */
nav {
  text-align: center;
  margin: 20px 0;
}

nav a {
  display: inline-block;
  margin: 0 15px;
  padding: 8px 15px;
  color: white;
  background-color: #2bb0a6;/* teal highlight for links*/
  border-radius: 5px;
  text-decoration: none;
  font-weight: bold;
  transition: background 0.3s;
}

nav a:hover {
  background-color: #1e7f1e;
  color: white;
}

/* =========================
   Sections (cards)
========================= */
section {
  background-color: #ffffff;
  padding: 25px;
  margin-bottom: 25px;
  border-radius: 8px;
  box-shadow: 0 4px 20px rgba(0,0,0,0.08);
}

section h2,
section h3 {
  color: #1f3a5f;/*match header theme*/
  margin-bottom: 15px;
}

/* =========================
   Images
========================= */
section img {
  max-width: 100%;
  border-radius: 8px;
  margin: 15px 0;
  box-shadow: 0 4px 15px rgba(0,0,0,0.08);
}

.image-grid {
  display: flex;
  flex-wrap: wrap;
  gap: 15px;
}

.image-grid img {
  flex: 1 1 30%;
  max-width: 100%;
  border-radius: 8px;
}
.image-grid img:hover{
  transform: scale(1.03);
  transition: 0.3s;
}
/* =========================
   Buttons & links
========================= */
section a {
  color: #2bb0a6;
  font-weight: bold;
  text-decoration: none;
}

section a:hover {
  text-decoration: underline;
}

/* WhatsApp button */
.whatsapp-btn {
  display: inline-block;
  margin-top: 10px;
  padding: 10px 18px;
  background-color: #25D366;
  color: white;
  border-radius: 6px;
  text-decoration: none;
  font-weight: bold;
}

/* =========================
   Footer
========================= */
footer {
  text-align: center;
  font-size: 0.9em;
  color: #555;
  border-top: 1px solid #ddd;
  padding: 20px;
  margin-top: 40px;
  background-color: #f6f7f9;
}

/* =========================
   Mobile
========================= */
@media (max-width: 768px) {
  nav a {
    display: block;
    margin: 10px 0;
  }

  .image-grid {
    flex-direction: column;
  }
}

